--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 on:
-    push:
-        branches:
-            - main
+  issues:
+    types: [labeled]
 
 jobs:
     contrib-readme-job:
@@ -10,5 +9,7 @@ jobs:
         steps:
             - name: Contribute List
               uses: akhilmhdh/contributors-readme-action@v2.3.3
+              with:
+                label: add me
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
